@@ -3,6 +3,7 @@ src/y.tab.h
 src/experres.h
 src/gram.c
 src/sc-im
+src/tags
 src/scim
 src/statres.h
 doc/grammar_yacc_tools/commands.txt
