@@ -372,6 +372,7 @@ void doLuaclose() {
  */
 
 char * doLUA( struct enode * se, int type) {
+    if ( ! get_conf_int("exec_lua")) return 0;
     char * cmd;
     char buffer[PATHLEN];
     char buffer1[PATHLEN];
@@ -399,6 +400,7 @@ char * doLUA( struct enode * se, int type) {
  */
 
 void doLuaTriger() {
+    if ( ! get_conf_int("exec_lua")) return;
     if (luaL_loadfile(L, "trigger.lua"))         /* Load but don't run the Lua script */
         return;
     //ui_bail(L, "luaL_loadfile() failed");      /* Error out if file can't be read */
@@ -427,6 +429,7 @@ void doLuaTriger() {
  */
 
 void doLuaTriger2(int row, int col, int flags) {
+    if ( ! get_conf_int("exec_lua")) return;
     if (luaL_loadfile(L, "trigger.lua"))         /* Load but don't run the Lua script */
         return;
     //ui_bail(L, "luaL_loadfile() failed");      /* Error out if file can't be read */
@@ -460,6 +463,7 @@ void doLuaTriger2(int row, int col, int flags) {
  */
 
 void doLuaTrigger_cell(struct ent *p, int flags) {
+    if ( ! get_conf_int("exec_lua")) return;
     int row,col;
     struct trigger *trigger = p->trigger;
     char buffer[PATHLEN];
